--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "babel-eslint": "^8.0.1",
-    "bootstrap": "^4.0.0-beta.2",
-    "file-saver": "^1.3.3",
-    "gh-pages": "^1.0.0",
-    "nanoid": "^1.0.0",
-    "prop-types": "^15.6.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-redux": "^5.0.6",
+    "babel-eslint": "^8.2.6",
+    "bootstrap": "^4.1.2",
+    "file-saver": "^1.3.8",
+    "gh-pages": "^1.2.0",
+    "nanoid": "^1.1.0",
+    "prop-types": "^15.6.2",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
     "react-scripts": "1.0.14",
-    "reactstrap": "^5.0.0-alpha.3",
+    "reactstrap": "^5.0.0",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -27,10 +27,10 @@
   },
   "homepage": "https://blu2z.github.io/react-test-app",
   "devDependencies": {
-    "eslint": "^4.10.0",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0"
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.10.0"
   }
 }
